# minikin

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  harfbuzz-icu-freetype_cmake.patch
ext/harfbuzz/: CMakeLists.txt  FindICU.cmake
ext/icu/: CMakeLists.txt
icudata/: Makefile  README.md  download_icu_data.sh  filters.json  requirements.txt
icudata/data/brkitr/: LOCALE_DEPS.json  de.txt  el.txt  en.txt  en_US_POSIX.txt  es.txt  fr.txt  it.txt  ja.txt  pt.txt  root.txt  ru.txt  zh.txt  zh_Hant.txt
icudata/data/brkitr/rules/: README.md
icudata/data/coll/: LOCALE_DEPS.json  af.txt  am.txt  ar.txt  as.txt  az.txt  be.txt  bg.txt  bn.txt  bo.txt  bs.txt  bs_Cyrl.txt  ca.txt  ceb.txt  chr.txt  cs.txt  cy.txt  da.txt  de.txt  de_AT.txt  dsb.txt  dz.txt  ee.txt  el.txt  en.txt  en_US_POSIX.txt  eo.txt  es.txt  et.txt  fa.txt  fa_AF.txt  ff_Adlm.txt  fi.txt  fil.txt  fo.txt  fr.txt  fr_CA.txt  ga.txt  gl.txt  gu.txt  (+79 more)
icudata/data/curr/: af.txt  af_NA.txt  agq.txt  ak.txt  am.txt  ar.txt  ar_AE.txt  ar_DJ.txt  ar_ER.txt  ar_KM.txt  ar_LB.txt  ar_SO.txt  ar_SS.txt  as.txt  asa.txt  ast.txt  az.txt  az_Cyrl.txt  bas.txt  be.txt  bem.txt  bez.txt  bg.txt  bm.txt  bn.txt  bo.txt  bo_IN.txt  br.txt  brx.txt  bs.txt  bs_Cyrl.txt  ca.txt  ca_FR.txt  ccp.txt  ce.txt  ceb.txt  cgg.txt  chr.txt  ckb.txt  cs.txt  (+385 more)
icudata/data/lang/: af.txt  agq.txt  ak.txt  am.txt  ar.txt  ar_EG.txt  ar_LY.txt  ar_SA.txt  as.txt  asa.txt  ast.txt  az.txt  az_Cyrl.txt  bas.txt  be.txt  bem.txt  bez.txt  bg.txt  bm.txt  bn.txt  bn_IN.txt  bo.txt  br.txt  brx.txt  bs.txt  bs_Cyrl.txt  ca.txt  ccp.txt  ce.txt  ceb.txt  cgg.txt  chr.txt  ckb.txt  cs.txt  cy.txt  da.txt  dav.txt  de.txt  de_AT.txt  de_CH.txt  (+267 more)
icudata/data/locales/: af.txt  af_NA.txt  af_ZA.txt  agq.txt  agq_CM.txt  ak.txt  ak_GH.txt  am.txt  am_ET.txt  ar.txt  ar_001.txt  ar_AE.txt  ar_BH.txt  ar_DJ.txt  ar_DZ.txt  ar_EG.txt  ar_EH.txt  ar_ER.txt  ar_IL.txt  ar_IQ.txt  ar_JO.txt  ar_KM.txt  ar_KW.txt  ar_LB.txt  ar_LY.txt  ar_MA.txt  ar_MR.txt  ar_OM.txt  ar_PS.txt  ar_QA.txt  ar_SA.txt  ar_SD.txt  ar_SO.txt  ar_SS.txt  ar_SY.txt  ar_TD.txt  ar_TN.txt  ar_YE.txt  as.txt  as_IN.txt  (+687 more)
icudata/data/misc/: icuver.txt  keyTypeData.txt  langInfo.txt  likelySubtags.txt  metaZones.txt  metadata.txt  numberingSystems.txt  pluralRanges.txt  plurals.txt  supplementalData.txt  windowsZones.txt  zoneinfo64.txt
icudata/data/rbnf/: LOCALE_DEPS.json  af.txt  ak.txt  am.txt  ar.txt  az.txt  be.txt  bg.txt  bs.txt  ca.txt  ccp.txt  chr.txt  cs.txt  cy.txt  da.txt  de.txt  de_CH.txt  ee.txt  el.txt  en.txt  en_001.txt  en_IN.txt  eo.txt  es.txt  es_419.txt  es_HN.txt  es_MX.txt  es_US.txt  et.txt  fa.txt  fa_AF.txt  ff.txt  fi.txt  fil.txt  fo.txt  fr.txt  fr_BE.txt  fr_CH.txt  ga.txt  he.txt  (+50 more)
icudata/data/region/: af.txt  agq.txt  ak.txt  am.txt  ar.txt  ar_AE.txt  ar_LY.txt  ar_SA.txt  as.txt  asa.txt  ast.txt  az.txt  az_Cyrl.txt  az_Latn.txt  bas.txt  be.txt  bem.txt  bez.txt  bg.txt  bm.txt  bn.txt  bn_IN.txt  bo.txt  bo_IN.txt  br.txt  brx.txt  bs.txt  bs_Cyrl.txt  ca.txt  ccp.txt  ce.txt  ceb.txt  cgg.txt  chr.txt  ckb.txt  cs.txt  cy.txt  da.txt  dav.txt  de.txt  (+265 more)
icudata/data/translit/: Hani_Latn.txt  Hira_Kana.txt  Latin_ASCII.txt  Latn_Cans.txt  Latn_Ethi.txt  my_my_Latn.txt  root.txt
icudata/data/unit/: LOCALE_DEPS.json  af.txt  agq.txt  am.txt  ar.txt  ar_SA.txt  as.txt  ast.txt  az.txt  az_Cyrl.txt  bas.txt  be.txt  bg.txt  bm.txt  bn.txt  br.txt  brx.txt  bs.txt  bs_Cyrl.txt  ca.txt  ccp.txt  ce.txt  ceb.txt  cgg.txt  chr.txt  ckb.txt  cs.txt  cy.txt  da.txt  dav.txt  de.txt  de_CH.txt  dsb.txt  dyo.txt  dz.txt  ebu.txt  ee.txt  el.txt  en.txt  en_001.txt  (+212 more)
icudata/data/xml/brkitr/: de.xml  el.xml  en.xml  en_US.xml  en_US_POSIX.xml  es.xml  fr.xml  it.xml  ja.xml  pt.xml  root.xml  ru.xml  zh.xml  zh_Hant.xml
icudata/data/xml/collation/: root.xml
icudata/data/xml/main/: root.xml
icudata/data/xml/rbnf/: be.xml  bg.xml  ca.xml  cy.xml  da.xml  de.xml  en.xml  fo.xml  ga.xml  is.xml  mk.xml  mt.xml  nb.xml  nn.xml  root.xml  ru.xml  sr.xml  uk.xml
icudata/data/zone/: af.txt  ak.txt  am.txt  ar.txt  as.txt  asa.txt  ast.txt  az.txt  be.txt  bem.txt  bez.txt  bg.txt  bn.txt  bo.txt  br.txt  brx.txt  bs.txt  bs_Cyrl.txt  ca.txt  ccp.txt  ce.txt  ceb.txt  chr.txt  cs.txt  cy.txt  da.txt  de.txt  de_CH.txt  dje.txt  dsb.txt  dua.txt  dz.txt  ee.txt  el.txt  en.txt  en_001.txt  en_150.txt  en_AE.txt  en_AU.txt  en_BE.txt  (+254 more)
icudata/lib/: icudt67.lib
icudata/lib64/: icudt67.lib
include/minikin/: Layout.h  LayoutCache.h  LayoutCore.h  MinikinPaint.h
libs/: README.md  _stub.h
libs/android-base/: macros.h
libs/log/: log.h
libs/minikin/: FontCollection.cpp  Layout.cpp  LayoutCore.cpp  MinikinInternal.h
